[gd_scene load_steps=6 format=3 uid="uid://m3f07je2igwj"]

[ext_resource type="Script" uid="uid://banr0h5hqgy3d" path="res://scripts/peg.gd" id="1_j6u4k"]
[ext_resource type="Texture2D" uid="uid://brkn8jftopvbe" path="res://assets/peg_blue.png" id="1_mhmpc"]
[ext_resource type="Texture2D" uid="uid://dfwjerc3a0plj" path="res://assets/bluehitpeg.png" id="3_upqsn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j6u4k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_upqsn"]

[node name="peg" type="StaticBody2D" groups=["peg"]]
collision_layer = 4
collision_mask = 10
script = ExtResource("1_j6u4k")

[node name="blue_peg" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_mhmpc")

[node name="blue_peg_hit" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("3_upqsn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_j6u4k")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_upqsn")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
